--- a/cv.tex
+++ b/cv.tex
@@ -25,107 +25,29 @@
    \vspace*{\stretch{2.0}}
 \end{titlepage}
 
-\section{Образование}
-\begin{itemize}
-    \item Сейчас получаю высшее образование (бакалавриат):
-        \begin{enumerate}
-            \item В "\textbf{НИУ МАИ}"
-            \item По программе \textbf{Прикладная Математика и Информатика} (01.03.02)
-            \item Курс 3
-            \item Начал обучение в \underline{2020} году, закончу в \underline{2024}.
-        \end{enumerate} 
-    \item Также я закончил \textbf{"Бауманскую инженерную школу №1580"} по \underline{физико-математическоаму профилю} (инженерный класс в московской школе)
-\end{itemize}
-
-\section{Какими технологиями я владею}
+\section{Технологии}
 \begin{enumerate}
-    \item Программирование на \underline{С} и \underline{С++}: \textbf{структуры данных, основные алгоритмы} на строки, графы, деревья, сортировки, также жадные алгоритмы, динамическое программирование; системное программирование под UNIX. ООП, немного функционального программирования, также пишу \textbf{олимпиады на уровне div. 2} 
-    \item Программирование на \underline{python}: работа в jupyter notebook и google colab. \textbf{Библиотеки OpenCV, tenzorflow, Scikit-learn, SciPy, pyTorch, pandas, numpy, sympy, matplotlib, django}, научные вычисления, веб-приложения
-    \item C++ для анализа \textbf{временных рядов}. Например, производных \textbf{финансовых инструментов}. Hull–White model, Vasicek model, Black–Karasinski model, yield curves.
-    \item Логическое программирование на \underline{Prolog} для простенького \textbf{NLP}
+    \item \underline{Python}: работа в jupyter notebook и google colab. \textbf{ OpenCV, tenzorflow, Scikit-learn, SciPy, pyTorch, pandas, numpy, sympy, matplotlib, django}, научные вычисления, веб-приложения. \textbf{Топологический анализ данных} на python, библиотека \textbf{GUDHI}
+    \item \textbf{Математика}: Мат. анализ, лин. алгебра, теория вероятностей и математическая статистика, методы оптимизации, вычислительная геометрия и топология
+    \item \underline{С} и \underline{С++}: \textbf{структуры данных, основные алгоритмы}, истемное программирование под UNIX. ООП, функциональное программирование, \textbf{олимпиады на уровне div. 2} 
+    \item C++ для анализа \textbf{временных рядов}. Например, производных \textbf{финансовых инструментов}.
+    \item Логическое программирование на \underline{Prolog} для \textbf{NLP}
     \item \underline{Веб-программирование на JavaScript} - технологии: \textbf{node.js, express.js, mongodb, postgres, docker, react, vue.js}
-    \item Программирование на \underline{C\#}: \textbf{формальные языки, грамматики}, конструирование компилятора и транслятора
-    \item \textbf{Топологический анализ данных} на python, библиотека \textbf{GUDHI}
     \item \textbf{Latex}. Формулы, форматирование документов.
-    \item Работа с \textbf{git, github, gitlab}
-    \item Контейнеризация с \textbf{docker}
+    \item Работа с \textbf{git, github, gitlab}, контейнеризация с \textbf{docker}
+
 \end{enumerate}
 
-\section{Личные проекты}
+\section{Проекты}
 \begin{itemize}
-    \item Анализ \textbf{временных рядов}. Расчет различных кривых и \textbf{математических моделей финансовой математики} (26 функций) на языке С++, описание и код можно найти \href{https://github.com/Suraba03/quantaton-2022-preparation}{тут}
+    \item \textbf{Computer vision} "Создание модели машинного обучения для улучшения качества старых фильмов (enhancement)".
+
     \item На этапе ресерча проект по тегированию изображений с использованием \textbf{топологического анализа данных и OpenCV}.
-\end{itemize}
-
-\section{Математика}
-
-Математику знаю на уровне курсов технических университетов в рамках прикладной математики. 
- Изучал по: \\
-\\
-
-\begin{tabular}{ | l | l | l | }
-    \hline
-        предмет & по чему изучал теорию & из чего прорешал задачи \\ \hline
-        Мат. анализ & Зорич; Кудрявцев & Демидович \\
-        алгебра & Городенцев, Кострикин & Городенцев,  Кострикин \\
-        лин. алгебра & Кострикин & Кострикин \\
-        Дифф. уравнения & Эльсгольц & Филиппов \\
-        Теория вероятностей & Гмурман & Гмурман \\
-        Топология & Виро & Виро\\
-    \hline
-\end{tabular}
-\subsection{Сейчас изучаю}
-\begin{itemize}
-    \item \textbf{Алгебраическая топология}
-    \item Алгоритмы топологического анализа данных
-    \item Базовые области математики на более глубоком уровне: действительный анализ, алгебра, геометрия.
-\end{itemize}
-
-\section{Мои Soft skills и разные навыки}
-\begin{itemize}
-    \item \textbf{Организоваю} неформальный клуб по олимпиадной математике, собираемся раз в неделю.
-    \item Решаю вопросы по клубу настольного тенниса в вузе. Доставляю информацию, ищу соревнования и прочее.
-    \item Организовываю однокурсников для бота контрольных, коллоквиумов, экзаменов.
-    \item Много занимаюсь \textbf{спортом}, нравятся такие виды как: волейбол, настольный теннис, бильярд.
-    \item \underline{Умею работать в команде и брать на себя ответственность}.
-\end{itemize}
-
-\section{Чем занимаюсь помимо ВУЗа}
-\begin{itemize}
-    \item С первого курса ВУЗа участвую в \textbf{олимпиадах} по программированию на codeforces в div2. Также \textbf{rucode} и \textbf{vkcup}
-    \item В этом году участвую в таких олимпиадах как:
-        \begin{enumerate}
-            \item \textbf{Математическая регата Тинькофф}
-            \item \textbf{Я - профессионал}: математика, программная инженерия, информационные технологии, искусственный интеллект
-            \item \textbf{Высшая лига}: математика, прикладная математика и информатика.
-            \item \textbf{Поволжская математическая олимпиада студентов}.
-            \item Также буду в этом году писать олимпиаду \textbf{"математика машинного обучения"}
-        \end{enumerate}
-    \item Прохожу разные \textbf{курсы} на степике и подобных платформах.
-    \\ Обучающие курсы на kaggle и от google по \textbf{нейронным сетям}.
-    \\Получил сертификаты по курсам:
-        \begin{enumerate}
-            \item \href{https://stepik.org/course/363/syllabus}{Введение в программирование (С++)}
-            \item  \href{https://stepik.org/course/4852/syllabus}{Введение в \textbf{Data Science} и машинное обучение} 
-            \item \href{https://stepik.org/course/3078/syllabus}{Основы программирования на C. Задачи.}
-        \end{enumerate}
-    Без сертификатов:
-        \begin{enumerate}
-            \item \href{https://stepik.org/course/76/syllabus}{Основы статистики}
-            \item \href{https://stepik.org/course/524/syllabus}{Основы статистики. Часть 2}
-        \end{enumerate}
-    \item Посещаю занятия НМУ по алгебре и анализу, решаю листки
     
-\end{itemize}
+    \item Анализ \textbf{временных рядов}. Расчет различных кривых и \textbf{математических моделей финансовой математики} (26 функций) на языке С++, описание и код можно найти \href{https://github.com/Suraba03/quantaton-2022-preparation}{тут}
 
-
-
-\section{Опыт научной и практической работы в ВУЗе}
-
-\subsection{Курсовые проекты в ВУЗе}
-\begin{enumerate}
     \item \textbf{NLP} "Генеалогическое дерево семьи Шекспира и анализ запросов к нему с использованием языка prolog". \href{https://github.com/Suraba03/LP/tree/main/cp}{код}
-    
+
     \item "Веб-приложение для сборки компьютера \textbf{стек: django, postgres, docker}". \href{https://github.com/Leha-Slava-Max-Kirill/computer_workshop}{код}
     
     \item "Машинное обучение. \textbf{Decision trees и random forests} и  для предсказания факта успешного окончания MOOC-курса обучающимся". \href{https://github.com/Suraba03/mini_ML_project_sem1}{код}
@@ -134,12 +56,26 @@
     
     \item "Многопоточная клиент-серверная система для мгновенной или отложенной отправки сообщений (\textbf{мессенджер}) на \textbf{С++}". \href{https://github.com/Suraba03/OS_MAI/tree/main/cp}{код}
 
-\end{enumerate}
-\subsection{Летние практики}
-
-\begin{enumerate}
     \item "Создание \underline{многопоточного} веб-приложения на \textbf{JavaScript}". \href{https://github.com/Leha-Slava-Max-Kirill/application}{код}
-    \item "Создание модели машинного обучения для улучшения качества старых фильмов (enhancement)".
-\end{enumerate}
+
+\end{itemize}
+
+\section{Soft skills и разные навыки}
+\begin{itemize}
+    \item \textbf{Английский язык B2}. Могу читать техническую литературу, смотреть курсы, общаться.
+    \item \textbf{Организоваю} клуб по олимпиадной математике, решаю вопросы по клубу настольного тенниса в вузе, ищу соревнования и прочее.
+    \item Организовываю однокурсников для подготовки к контрольным, коллоквиумам, экзаменам.
+    \item Занимаюсь \textbf{спортом}, Умею работать в команде и \underline{брать ответственность}.
+\end{itemize}
+
+\section{Чем занимаюсь для улучшения навыков}
+\begin{itemize}
+    \item Участвую в \textbf{олимпиадах} по программированию на codeforces в div2. Также \textbf{rucode} и \textbf{vkcup}
+    \item В олимпиадах по математике и информатике: Математическая регата Тинькофф, Я - профессионал, Высшая лига, математика машинного обучения
+
+    \item Прохожу разные \textbf{курсы} на степике и подобных платформах.
+    \\ Обучающие курсы на \underline{kaggle} и от google по \textbf{нейронным сетям}.
+    \\Получил сертификаты по курсам:        \href{https://stepik.org/course/363/syllabus}{Введение в программирование (С++)}, \href{https://stepik.org/course/4852/syllabus}{Введение в \textbf{Data Science} и машинное обучение},          \href{https://stepik.org/course/3078/syllabus}{Основы программирования на C. Задачи.}, \href{https://stepik.org/course/76/syllabus}{Основы статистики}, \href{https://stepik.org/course/524/syllabus}{Основы статистики. Часть 2}    
+\end{itemize}
 
 \end{document}
