--- a/cv.tex
+++ b/cv.tex
@@ -12,19 +12,13 @@
 \date{}
 \begin{document}
 
-\begin{titlepage}
-   \vspace*{\stretch{1.0}}
-   \begin{center}
-      \Large\textbf{Резюме.}\\
-      \large\textit{ Чекменев Вячеслав Алексеевич, 19 лет}\\
+
+\section{О себе}
+      \large Чекменев Вячеслав Алексеевич, 19 лет\\
       \large почта: chekmenev031@gmail.com \\
       \large телефон: +7-985-829-15-40 \\
       \large \href{https://github.com/Suraba03}{GitHub} \\
       \large Telegram: @suraba03\\
-   \end{center}
-   \vspace*{\stretch{2.0}}
-\end{titlepage}
-
 \section{Технологии}
 \begin{enumerate}
     \item \underline{Python}: работа в jupyter notebook и google colab. \textbf{ OpenCV, tenzorflow, Scikit-learn, SciPy, pyTorch, pandas, numpy, sympy, matplotlib, django}, научные вычисления, веб-приложения. \textbf{Топологический анализ данных} на python, библиотека \textbf{GUDHI}
