--- a/cv.tex
+++ b/cv.tex
@@ -21,7 +21,7 @@
       \large Telegram: @suraba03\\
 \section{Технологии}
 \begin{enumerate}
-    \item \underline{Python}: работа в jupyter notebook и google colab. \textbf{ OpenCV, tenzorflow, Scikit-learn, SciPy, pyTorch, pandas, numpy, sympy, matplotlib, django}, научные вычисления, веб-приложения. \textbf{Топологический анализ данных} на python, библиотека \textbf{GUDHI}
+    \item \underline{Python}: работа в jupyter notebook и google colab. \textbf{Scikit-learn, SciPy, pandas, numpy, sympy, matplotlib, django}, pyTorch, OpenCV, tenzorflow, научные вычисления, веб-приложения. \textbf{Топологический анализ данных}
     \item \textbf{Математика}: Мат. анализ, лин. алгебра, теория вероятностей и математическая статистика, методы оптимизации, вычислительная геометрия и топология
     \item \underline{С} и \underline{С++}: \textbf{структуры данных, основные алгоритмы}, истемное программирование под UNIX. ООП, функциональное программирование, \textbf{олимпиады на уровне div. 2} 
     \item C++ для анализа \textbf{временных рядов}. Например, производных \textbf{финансовых инструментов}.
