--- a/cv.tex
+++ b/cv.tex
@@ -21,12 +21,12 @@
       \large Telegram: @suraba03\\
 \section{Технологии}
 \begin{enumerate}
-    \item \underline{Python}: работа в jupyter notebook и google colab. \textbf{Scikit-learn, SciPy, pandas, numpy, sympy, matplotlib, django}, pyTorch, OpenCV, tenzorflow, научные вычисления, веб-приложения. \textbf{Топологический анализ данных}
+    \item \underline{Python}: работа в jupyter notebook и google colab. \textbf{Scikit-learn, SciPy, pandas, numpy, sympy, matplotlib, django}, научные вычисления, веб-приложения. \textbf{Топологический анализ данных}
     \item \textbf{Математика}: Мат. анализ, лин. алгебра, теория вероятностей и математическая статистика, методы оптимизации, вычислительная геометрия и топология
     \item \underline{С} и \underline{С++}: \textbf{структуры данных, основные алгоритмы}, истемное программирование под UNIX. ООП, функциональное программирование, \textbf{олимпиады на уровне div. 2} 
     \item C++ для анализа \textbf{временных рядов}. Например, производных \textbf{финансовых инструментов}.
     \item Логическое программирование на \underline{Prolog} для \textbf{NLP}
-    \item \underline{Веб-программирование на JavaScript} - технологии: \textbf{node.js, express.js, mongodb, postgres, docker, react, vue.js}
+    \item \underline{Веб-программирование на JavaScript} - технологии: \textbf{node.js, express.js, mongodb, postgres, docker}
     \item \textbf{Latex}. Формулы, форматирование документов.
     \item Работа с \textbf{git, github, gitlab}, контейнеризация с \textbf{docker}
 
@@ -36,9 +36,9 @@
 \begin{itemize}
     \item \textbf{Computer vision} "Создание модели машинного обучения для улучшения качества старых фильмов (enhancement)".
 
-    \item На этапе ресерча проект по тегированию изображений с использованием \textbf{топологического анализа данных и OpenCV}.
+    \item Алгоритм Кули-Тьюки для \textbf{fast fourier transform}, \textbf{аудиопоиск}. \href{https://github.com/Suraba03/DA_MAI/tree/main/CP}{код}
     
-    \item Анализ \textbf{временных рядов}. Расчет различных кривых и \textbf{математических моделей финансовой математики} (26 функций) на языке С++, описание и код можно найти \href{https://github.com/Suraba03/quantaton-2022-preparation}{тут}
+    \item Расчет различных кривых и \textbf{математических моделей финансовой математики} (26 функций) на языке С++, описание и код можно найти \href{https://github.com/Suraba03/quantaton-2022-preparation}{тут}
 
     \item \textbf{NLP} "Генеалогическое дерево семьи Шекспира и анализ запросов к нему с использованием языка prolog". \href{https://github.com/Suraba03/LP/tree/main/cp}{код}
 
@@ -58,8 +58,7 @@
 \begin{itemize}
     \item \textbf{Английский язык B2}. Могу читать техническую литературу, смотреть курсы, общаться.
     \item \textbf{Организоваю} клуб по олимпиадной математике, решаю вопросы по клубу настольного тенниса в вузе, ищу соревнования и прочее.
-    \item Организовываю однокурсников для подготовки к контрольным, коллоквиумам, экзаменам.
-    \item Занимаюсь \textbf{спортом}, Умею работать в команде и \underline{брать ответственность}.
+    \item Занимаюсь \textbf{спортом}, Умею работать в команде.
 \end{itemize}
 
 \section{Чем занимаюсь для улучшения навыков}
