--- a/cv.tex
+++ b/cv.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,10pt]{report}
 \usepackage{ upgreek }
 \usepackage{ tipa }
 \usepackage[T2A]{fontenc}
@@ -17,19 +17,18 @@
       \large Чекменев Вячеслав Алексеевич, 20 лет\\
       \large почта: chekmenev031@gmail.com \\
       \large телефон: +7-985-829-15-40 \\
-      \large \href{https://github.com/Suraba03}{GitHub} \\
-      \large Telegram: @suraba03\\
-\section{Технологии}
+      \large \href{https://github.com/Suraba03}{GitHub}, Telegram: @suraba03\\
+\section{Навыки}
 \begin{enumerate}
-    \item \underline{Python}: работа в jupyter notebook и google colab. \textbf{Scikit-learn, SciPy, pandas, numpy, sympy, matplotlib, django}, научные вычисления, веб-приложения. \textbf{Топологический анализ данных}
+    \item \underline{Python}: jupyter notebook и google colab. \textbf{Scikit-learn, SciPy, pandas, numpy, sympy, matplotlib, django}, научные вычисления, веб-приложения.
     \item \textbf{Математика}: Мат. анализ, лин. алгебра, теория вероятностей и математическая статистика, методы оптимизации, вычислительная геометрия и топология
-    \item \underline{С} и \underline{С++}: \textbf{структуры данных, основные алгоритмы}, истемное программирование под UNIX. ООП, функциональное программирование, \textbf{олимпиады на уровне div. 2} 
-    \item C++ для анализа \textbf{временных рядов}. Например, производных \textbf{финансовых инструментов}.
-    \item Логическое программирование на \underline{Prolog} для \textbf{NLP}
+    \item \underline{С} и \underline{С++}: \textbf{структуры данных, алгоритмы}, системное программирование под UNIX. ООП, функциональное программирование, олимпиадное программирование. 
+    \item Анализ производных \textbf{финансовых инструментов} на с++.
+    \item Логическое программирование на \underline{Prolog} для \textbf{NLP}.
     \item \underline{Веб-программирование на JavaScript} - технологии: \textbf{node.js, express.js, mongodb, postgres, docker}
     \item \textbf{Latex}. Формулы, форматирование документов.
     \item Работа с \textbf{git, github, gitlab}, контейнеризация с \textbf{docker}
-
+    \item \textbf{Английский язык B2}. Могу читать техническую литературу, смотреть курсы, общаться.
 \end{enumerate}
 
 \section{Проекты}
@@ -48,17 +47,10 @@
     
     \item "Алгоритм Дейкстры поиска кратчайших путей в графе. Графический пользовательский интерфейс.". \href{https://github.com/Suraba03/mai_prooga_sem2/tree/main/cp_dm_Dijkstra}{код}
     
-    \item "Многопоточная клиент-серверная система для мгновенной или отложенной отправки сообщений (\textbf{мессенджер}) на \textbf{С++}". \href{https://github.com/Suraba03/OS_MAI/tree/main/cp}{код}
+    \item "Многопоточная клиент-серверная система для мгновенной или отложенной отправки сообщений (\textbf{мессенджер}) на \textbf{си}. \href{https://github.com/Suraba03/OS_MAI/tree/main/cp}{код}
 
     \item "Создание \underline{многопоточного} веб-приложения на \textbf{JavaScript}". \href{https://github.com/Leha-Slava-Max-Kirill/application}{код}
 
-\end{itemize}
-
-\section{Soft skills и разные навыки}
-\begin{itemize}
-    \item \textbf{Английский язык B2}. Могу читать техническую литературу, смотреть курсы, общаться.
-    \item \textbf{Организоваю} клуб по олимпиадной математике, решаю вопросы по клубу настольного тенниса в вузе, ищу соревнования и прочее.
-    \item Занимаюсь \textbf{спортом}, Умею работать в команде.
 \end{itemize}
 
 \section{Чем занимаюсь для улучшения навыков}
